# TrainExample

./: .gitignore  .gitmodules  CMakeLists.txt
Core/: CMakeLists.txt
Core/include/: ASystem.hpp  ComponentCommon.hpp  GameObject.hpp  LogManager.hpp  Path.hpp  Vec3Reader.hpp  World.hpp
Core/include/assets/: AssetManager.hpp  GeneralSettingsAsset.di  GeneralSettingsAsset.hpp  SceneUnits.di  SystemGroupAsset.di
Core/include/assets/units/: SceneUnit.hpp
Core/include/common/: Transform.di  Transform.hpp
Core/include/events/: AEvent.hpp
Core/src/: AComponent.cpp  GameObject.cpp  LogManager.cpp  Vec3Reader.cpp  World.cpp  main.cpp
Core/src/assets/: AssetManager.cpp  GeneralSettingsAsset.cpp  SceneAsset.cpp
Core/src/assets/units/: OverriddenSceneUnit.cpp
Core/src/common/: TransformSystem.cpp
Core/src/common/components/: TransformComponent.cpp
Core/src/timers/: SleepTimer.cpp
GUIApp/: CMakeLists.txt
GUIApp/assets/: DIAssets.config  config.asset  settings.asset  systems.asset
GUIApp/assets/curves/: path.asset
GUIApp/assets/materials/: default_sky.asset  grass.asset  metal.asset  park_sky.asset  plastic.asset  rustediron.asset  train.asset  wood.asset  wood_wicker.asset
GUIApp/assets/meshes/: cube.asset  plane.asset  rails.asset  sky_sphere.asset  sleepers.asset  sphere.asset
GUIApp/assets/prefabs/: train.asset  train_5.asset  train_block.asset
GUIApp/assets/scenes/: cross_scene.asset  train_scene.asset
GUIApp/assets/shaders/: blinn_phong.asset  blinn_phong.frag  cook_torance.asset  cook_torance.frag  procedural_sky.asset  procedural_sky.frag  procedural_sky.vert  simple.asset  simple.frag  simple.vert  sky.vert  spherical_sky.asset  spherical_sky.frag  standart.asset  standart.frag  standart.vert
GUIApp/assets/skies/: default_sky.asset  park_sky.asset
GUIApp/assets/textures/plastic/: plastic_ao.asset  plastic_base.asset  plastic_normal.asset  plastic_rough.asset
GUIApp/assets/textures/rustediron/: rustediron_base.asset  (+3 more)
GUIApp/include/: AComponent.hpp  ACurve.hpp  AGameObject.hpp  APlayerController.hpp  ASystem.hpp  Camera.hpp  CameraManipulator.hpp  CameraView.hpp  Circle2D.hpp  Curves.di  DynamicObject.hpp  GameObject.hpp  HighResolutionTimer.hpp  InputController.hpp  LevelSwitcher.di  LogManager.hpp  MainCameraView.hpp  Manipulators.di  Material.hpp  MeshGenerator.hpp  Other.di  ParallelCurve.hpp  Path.hpp  PlayerController.di  Primitives.hpp  Rails.hpp  SharedMesh.hpp  SleepTimer.hpp  Sleepers.hpp  Spawner.di  Spline.hpp  StaticObject.hpp  SystemCommon.hpp  TrackedObject.hpp  TrainBuilder.hpp  Transform.hpp  Vec3Reader.hpp  World.di  World.hpp  WorldContext.hpp
GUIApp/include/assets/: AssetManager.hpp  ExtraMeshes.di  GeneralSettingsAsset.di  GeneralSettingsAsset.hpp  GraphicalAsset.hpp  MaterialAsset.hpp  Materials.di  MeshAsset.hpp  Meshes.di  SceneAsset.hpp  SceneUnits.di  ShaderAsset.hpp  SystemGroupAsset.di  SystemGroupAsset.hpp
GUIApp/include/common/: Transform.di  Transform.hpp  TransformSystem.hpp
GUIApp/include/components/: AComponent.hpp  AutoRotateComponent.hpp  CameraComponent.hpp  CameraManipulator.hpp  FlyCameraManipulator.hpp  ICameraManipulator.hpp  LevelSwitcherComponent.hpp  LightComponent.hpp  ManipulatorSwitcher.hpp  ManipulatorSwitcherAdder.hpp  OrbitCameraManipulator.hpp  PlayerController.hpp  RenderComponent.hpp  RotateCameraManipulator.hpp  SpawnerComponent.hpp  TrackedComponent.hpp  TransformComponent.hpp
GUIApp/include/events/: EventListener.hpp
GUIApp/include/input/: AInputActionImpl.hpp  AInputAxisImpl.hpp  Input.di  InputAction.hpp  InputAxis.hpp  InputSystem.hpp  KeyInputAxisImpl.hpp  KeyboardInputActionImpl.hpp  MouseInputActionImpl.hpp  MouseInputAxisImpl.hpp
GUIApp/include/physics/: APhysicalEntity.hpp  PhysicalSystem.hpp  Physics.di  TrackedEntity.hpp
GUIApp/include/render/: CameraView.hpp  CameraViewImpl.hpp  ICameraView.hpp  MainCameraViewImpl.hpp  Render.di  RenderObject.hpp  RenderPointLight.hpp  RenderSystem.hpp
GUIApp/include/systems/: LevelManager.hpp  PlayerManager.hpp
GUIApp/include/timers/: BaseTimer.hpp  HighResolutionTimer.hpp  QueueAverager.hpp  QueueEstimator.hpp  SleepTimer.hpp  WelfordEstimator.hpp
GUIApp/src/: AComponent.cpp  ACurve.cpp  AGameObject.cpp  Camera.cpp  CameraManipulator.cpp  CameraView.cpp  Circle2D.cpp  DynamicObject.cpp  GameObject.cpp  HighResolutionTimer.cpp  InputController.cpp  LogManager.cpp  MainCameraView.cpp  Material.cpp  MeshGenerator.cpp  ParallelCurve.cpp  Path.cpp  Primitives.cpp  Rails.cpp  SharedMesh.cpp  SleepTimer.cpp  Sleepers.cpp  Spline.cpp  StaticObject.cpp  TrackedObject.cpp  TrainBuilder.cpp  Transform.cpp  Vec3Reader.cpp  WelfordEstimator.cpp  World.cpp  WorldContext.cpp  main.cpp
GUIApp/src/assets/: AssetManager.cpp  GeneralSettingsAsset.cpp  MaterialAsset.cpp  MeshAsset.cpp  SceneAsset.cpp  ShaderAsset.cpp  SystemGroupAsset.cpp
GUIApp/src/common/: Transform.cpp  TransformSystem.cpp
GUIApp/src/components/: AComponent.cpp  AutoRotateComponent.cpp  CameraComponent.cpp  CameraManipulator.cpp  FlyCameraManipulator.cpp  LevelSwitcherComponent.cpp  LightComponent.cpp  ManipulatorSwitcher.cpp  ManipulatorSwitcherAdder.cpp  OrbitCameraManipulator.cpp  PlayerController.cpp  RenderComponent.cpp  RotateCameraManipulator.cpp  SpawnerComponent.cpp  TrackedComponent.cpp  TransformComponent.cpp
GUIApp/src/events/: AEvent.cpp  EventListener.cpp
GUIApp/src/input/: AInputActionImpl.cpp  AInputAxisImpl.cpp  InputAction.cpp  InputAxis.cpp  InputDistributor.cpp  InputSystem.cpp  KeyInputAxisImpl.cpp  KeyboardInputAction.cpp  MouseInputAction.cpp  MouseInputAxisImpl.cpp
GUIApp/src/physics/: APhysicalEntity.cpp  PhysicalSystem.cpp  TrackedEntity.cpp
GUIApp/src/render/: CameraView.cpp  CameraViewImpl.cpp  MainCameraViewImpl.cpp  RenderObject.cpp  RenderPointLight.cpp  RenderSystem.cpp
GUIApp/src/systems/: LevelManager.cpp  PlayerManager.cpp
GUIApp/src/timers/: BaseTimer.cpp  HighResolutionTimer.cpp  QueueAverager.cpp  QueueEstimator.cpp  SleepTimer.cpp  WelfordEstimator.cpp
modules/Input/: CMakeLists.txt
modules/Input/include/: Input.di
(+63 files in other folders)
